--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <input type="text" placeholder="Search location">
+                    <input type="text" id="userSearch" placeholder="Search location">
 
                 </div>
             </div>
@@ -24,16 +24,29 @@
         <div class="container WCBG">
             <div class="row">
                 <div class="col-12">
-                    <h1>default location</h1>
+                    <h1 id="findLocation">default location</h1>
                     
                 </div>
                 <div class="col-2">
-                    <p>time</p>
+                    <p id="theTime">time</p>
 
                 </div>
                 <div class="col-2">
-                    <p>Date</p>
+                    <p id="theDate">Date</p>
                 </div>
+            </div>
+        </div>
+        <div class="container WCBG">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="d-flex justify-content-center">Saved Locations</h1>
+                    <hr>
+                </div>
+                <div class="col-12">
+                    <h1 class="d-flex justify-content-center">Recent</h1>
+                    <hr>
+                </div>
+                
             </div>
         </div>
     </main>
