The Day 3 commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <input type="text" id="userSearch" placeholder="Search location">
+                    <input type="text" id="searchBar" placeholder="Search location">
 
                 </div>
             </div>
