--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col">
                     <input type="text" id="searchBar" placeholder="Search location">
-
+                    <img id="searchBtn" src="./assets/searchIcon.png" alt="Search Button">
                 </div>
             </div>
         </div>
@@ -25,6 +25,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 id="findLocation">default location</h1>
+                    <img id="addFavoriteBtn" src="./assets/plusIcon.png" alt="add to Favorite Button">
                     
                 </div>
                 <div class="col-2">
@@ -34,6 +35,15 @@
                 <div class="col-2">
                     <p id="theDate">Date</p>
                 </div>
+                <div class="col-12">
+                    <p id="currentTemp">Temperature</p>
+                </div>
+                <div class="col-6">
+                    <p id="highTemp">High</p>
+                </div>
+                <div class="col-6">
+                    <p id="lowTemp">Low</p>
+                </div>
             </div>
         </div>
         <div class="container WCBG">
@@ -41,10 +51,16 @@
                 <div class="col-12">
                     <h1 class="d-flex justify-content-center">Saved Locations</h1>
                     <hr>
+                    <ul id="favoriteCitiesList">
+
+                    </ul>
                 </div>
                 <div class="col-12">
                     <h1 class="d-flex justify-content-center">Recent</h1>
                     <hr>
+                    <ul id="recentSearchesList">
+
+                    </ul>
                 </div>
                 
             </div>
